# ROKEY3_SLAM_robot_system

./: README.md
SystemController/system_controller/: package.xml  setup.cfg  setup.py
SystemController/system_controller/system_controller/: system_controller_DB.py
SystemController/vehicle_alert/: CMakeLists.txt  package.xml
SystemController/vehicle_alert/msg/: VehicleAlert.msg
SystemController/vehicle_info/: CMakeLists.txt  package.xml
SystemController/vehicle_info/msg/: VehicleInfo.msg
dash_board/data_packet/: package.xml  setup.cfg  setup.py
dash_board/data_packet/data_packet/: action_mux.py  rviz_graphic_robot0.py  rviz_graphic_robot1.py
dash_board/visual_dashboard/: CMakeLists.txt  package.xml  setup.cfg  setup.py
dash_board/visual_dashboard/launch/: dashboard_node.launch.py
dash_board/visual_dashboard/visual_dashboard/: dashboard_node.py
data_preprocessing/: CMakeLists.txt  package.xml
data_preprocessing/src/: camera_preprocessing.cpp  scan_downsampler_node.cpp
object_detection_module/: package.xml  setup.cfg  setup.py
object_detection_module/object_detection_module/: yolo_detection_cam0.py  yolo_detection_cam1.py  yolo_ocr_depth_checker0.py  yolo_ocr_depth_checker1.py
rmf_demos_bridges/rmf_demos_bridges/: .rmf_schedule_node.yaml
rokey_pjt/: package.xml  setup.cfg  setup.py
rokey_pjt/config/: local2.yaml  nav2_net.yaml  nav2_net2.yaml  nav2_net2_ver1.yaml  new_waypoints.yaml  waypoints_0.yaml  waypoints_1.yaml  waypoints_P1.yaml  waypoints_P2.yaml  waypoints_test.yaml  waypoints_world.yaml
rokey_pjt/launch/: bfs_nav_to_pose.launch.py  bfs_nav_to_pose1.launch.py  bfs_nav_to_pose_0.launch.py  bfs_nav_to_pose_1.launch.py  localization.launch.py  pm_rv.launch.py
rokey_pjt/maps/: P00.pgm  P00.yaml  P1.pgm  P1.yaml  P2.pgm  P2.yaml
rokey_pjt/rokey_pjt/: auto_init_pose.py  auto_waypoints.py  bfs_navigator.py  bfs_navigator_v2.py  bfs_path_finder.py  bfs_path_finder0.py  bfs_path_finder1.py  bfs_path_finder_v2.py  controller0.py  controller1.py  dock_controller.py  dock_controller0.py  dock_controller1.py  map_switcher.py  nav_to_elevator.py  path_follower.py  path_marker.py  path_marker0.py  path_marker1.py  pose_publisher.py  pose_publisher0.py  pose_publisher1.py  pose_publisher_v2.py  turtlebot4_0_nav.py  waypoint_saver.py  waypoints_follower0.py  waypoints_follower1.py
rokey_pjt/rviz/: rviz.rviz
rokey_rmf/: package.xml  setup.cfg  setup.py
rokey_rmf/config/: test.building.yaml  turtlebot4_config.yaml
rokey_rmf/config/nav_graphs/: 0.yaml
rokey_rmf/dashboard/: dashboard.json
rokey_rmf/launch/: rmf.launch.xml  test.launch.xml
rokey_rmf/rokey_rmf/: tb4_adapter.py
