<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_detection_module</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="smitelims15@gmail.com">smite</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

    <!-- 기본 빌드 도구 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 메시지 관련 -->
  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>cv_bridge</build_depend>
  <exec_depend>cv_bridge</exec_depend>

  <build_depend>image_transport</build_depend>
  <exec_depend>image_transport</exec_depend>

  <!-- 메시지 타입 정의용 (사용 시) -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- 메시지 패키지를 직접 정의할 경우 -->
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <!-- 외부 Python 패키지 사용 시 -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-requests</exec_depend>
  <exec_depend>python3-ultralytics</exec_depend> <!-- YOLO -->
  <exec_depend>python3-easyocr</exec_depend>
  <exec_depend>python3-supervision</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
